# gc-tester

./: README.md  gc-tester.cabal  package.yaml  stack.yaml
src/: Main.hs
